--- a/tsd-api/tsd-api.csproj
+++ b/tsd-api/tsd-api.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BouncyCastle.NetCore" Version="1.9.0" />
     <PackageReference Include="BouncyCastle.NetCoreSdk" Version="1.9.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
